<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Coinbase, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scopesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/label_scopes"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scopesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scopesLabel"
        tools:text="wallet:user:read" />

    <TextView
        android:id="@+id/expiresLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/label_expires"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scopesTextView" />

    <TextView
        android:id="@+id/expiresTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expiresLabel"
        tools:text="Tue, March 16 2018, 12:00:00 GMT" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/refreshTokenButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expiresTextView" />

    <TextView
        android:id="@+id/refreshTokenButton"
        style="@style/MenuTextView"
        android:layout_marginBottom="8dp"
        android:text="@string/refresh_token"
        app:layout_constraintBottom_toTopOf="@+id/revokeTokenButton" />

    <TextView
        android:id="@+id/revokeTokenButton"
        style="@style/MenuTextView"
        android:layout_marginBottom="16dp"
        android:text="@string/revoke_token"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton" />

    <TextView
        android:id="@+id/logoutButton"
        style="@style/MenuTextView"
        android:layout_marginBottom="36dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>